--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Michal Zarnowski",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "3.0.0",
